# Gomoku

./: CMakeLists.txt  README.md
src/: game.c  game.h  input.c  input.h  main.c  md5.c  md5.h  rule.c  rule.h  stats.c  stats.h  utils.c  utils.h
src/gomoko/: eval.c  eval.h  gomoko.c  gomoko.h
